Bug 981296 - Do not make assertions on the initial shape table before it is created; r=sfink